--- a/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -6,9 +6,6 @@
   height: 100dvh;
   background-color: $primary-sidebar;
   transition: width 0.3s ease;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   padding: 20px;
 
   &.collapsed {
@@ -18,21 +15,35 @@
     padding-left: 0;
   }
 
-  .content {
+  .header {
     display: flex;
-    flex-direction: column;
-    .users-section {
-      .user {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-between;
+
+    .logo {
+      width: 130px;
+      height: 48px;
+      cursor: pointer;
+
+      @include media(">=tablet") {
+        height: 55px;
+      }
+    }
+
+    .toggle-section {
+      span {
+        cursor: pointer;
       }
     }
   }
 
-  .toggle-section {
-    span {
-      cursor: pointer;
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 30px;
+    div {
+      padding: 10px;
     }
   }
 }
