--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -13,10 +13,24 @@
 
       .header-bar {
         height: 50px;
-      }
 
-      .separator {
-        border-bottom: 1px solid lightgray;
+        .content {
+          display: flex;
+          justify-content: end;
+          align-items: center;
+          height: 100%;
+          padding: 10px 20px;
+
+          .user {
+            padding-right: 20px;
+            display: flex;
+            gap: 8px;
+          }
+
+          .logout {
+            cursor: pointer;
+          }
+        }
       }
     }
   }
