--- a/src/app/shared/scss/colors.scss
+++ b/src/app/shared/scss/colors.scss
@@ -3,4 +3,6 @@ $footer-primary: #fcf5ee;
 $primary-black: #000;
 $secondary-black: #374151;
 $primary-red: #de483a;
-$primary-sidebar: #d9d1d0;
+$lighter-red: #faddd9;
+$hover-red: #faebe8;
+$primary-sidebar: #f3efee;
